# ver_crawler_code

./: LICENSE  README.md
crawler_star_photo/: .gitignore  README.md  pyproject.toml  requirements.txt  run_crawler_age.bat  run_crawler_keyword.bat  selenium_image_client.py  star_photo_crawler_age.py  star_photo_crawler_keyword.py
crawler_star_photo/ai_utils/: __init__.py  age_predict.py
