[project]
name = "star-photo-crawler"
version = "1.0.0"
description = "明星照片爬虫 - 按年龄段爬取明星照片"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "selenium>=4.0.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "webdriver-manager>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

